--- a/src/MyMvvmCrossApp1.UI/MyMvvmCrossApp1.UI.csproj
+++ b/src/MyMvvmCrossApp1.UI/MyMvvmCrossApp1.UI.csproj
@@ -28,6 +28,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Pages\NextPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="App.xaml">
       <Generator>MSBuild:Compile</Generator>
     </None>
